# Oqaasileriffik-template

./: .gitignore  AGENTS.md  LICENSE  README.md  mypy.ini  pyproject.toml
convert/: convert.py  schema.json
oqaasileriffik_convert/: convert.py  schema.json
oqaasileriffik_pipeline/: __init__.py  core.py
scripts/: bootstrap_venv.sh
tests/: test_pipeline.py  test_write_atomic.py
