[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oqaasileriffik-template"
version = "0.1.0"
description = "Oqaasileriffik data extraction pipeline template"
requires-python = ">=3.10"
dependencies = [
    "odfpy==1.4.1",
    "jsonschema==4.23.0",
    "nltk==3.8.1"
]

[project.scripts]
convert-data = "oqaasileriffik_convert.convert:main"

[project.optional-dependencies]
dev = [
    "mypy==1.6.0",
    "pytest==7.4.0",
    "ruff==0.1.0"
]

[tool.setuptools]
packages = ["oqaasileriffik_convert"]

[tool.setuptools.package-data]
oqaasileriffik_convert = ["*.json"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true

[tool.ruff]
target-version = "py310"
