[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oqaasileriffik-pipeline"
version = "0.1.0"
description = "Oqaasileriffik data extraction core pipeline"
requires-python = ">=3.10"
dependencies = [
    "odfpy==1.4.1",
    "jsonschema==4.23.0",
    "nltk==3.9.1"
]

[project.optional-dependencies]
dev = [
    "mypy==1.15.0",
    "pytest==8.3.0",
    "ruff==0.9.0"
]

[tool.setuptools]
packages = ["oqaasileriffik_pipeline"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
